# vigir_scripts

./: 10.workspace_setup_scripts.sh.em  11.workspace_setup_bash.bash.em  CMakeLists.txt  README.md  package.xml
drcsim/: setup.sh
helpers/: atlas  atlas_boston  atlas_calibration  atlas_dead_sandia  atlas_debris_task  atlas_door_task  atlas_hooks  atlas_hose_task  atlas_irobot  atlas_ladder_task  atlas_multisense  atlas_sandia  atlas_sim  atlas_stumps  atlas_terrain_task  atlas_valve_task  atlas_vehicle_task  atlas_wall_task  bag_compress_recursive  chrony_tracking.py  dhcp_eth0  dhcp_eth1  drcsim_models  field_eth0  field_eth1  flor_branches  flor_define_door  flor_define_task  flor_define_valve  flor_gandalf_windows_1  flor_gandalf_windows_2  flor_gandalf_windows_3  flor_gandalf_windows_default  flor_make  flor_make_clean  flor_merge_master_to_hydro  flor_push_hydro  flor_record_vrc  flor_status  flor_switch_to_master  (+112 more)
scripts/: clean.sh  clean_externals.sh  comms_bridge.sh  hands.sh  install.sh  make.sh  make_clean.sh  make_externals.sh  new-update.sh  revert.sh  revert_update.sh  revert_update_make.sh  rm_obsolete_packages.sh  setupLocalCommits.py  status.sh  tagAllRepositories.py  thor_upgrade.sh  update.sh  update_make.sh
setup/: setup.bash
vigir_pronto/: vigir_pronto_build.sh  vigir_pronto_build_for_deploy.sh  vigir_pronto_record.sh  vigir_pronto_reset.sh  vigir_pronto_start.sh  vigir_pronto_start_deployed_fusion.sh  vigir_pronto_start_deployed_lcm2ros.sh  vigir_pronto_start_deployed_robot_model_publisher.sh  vigir_pronto_start_deployed_ros2lcm.sh  (+5 more)
(+118 files in other folders)
